--- a/products/scatterplot/interactive_scatterplot.html
+++ b/products/scatterplot/interactive_scatterplot.html
@@ -8,77 +8,78 @@
         var data = google.visualization.arrayToDataTable([
 		['proportion of illiterates', 'proportion of aid', {'type': 'string', 'role': 'style'}, {'type': 'string', 'role': 'tooltip'}],
 	[0.02488,0.00756,'color: #f4a582','Aileu vila'],
-[0.01794,0.00581,'color: #f7f7f7','Ainaro'],
-[0.00856,0.00597,'color: #f7f7f7','Alas'],
-[0.01243,0.00785,'color: #f7f7f7','Atabae'],
-[0.01033,0.01546,'color: #f7f7f7','Atauro'],
-[0.03054,0.01737,'color: #f7f7f7','Atsabe'],
-[0.004,0.01337,'color: #f7f7f7','Baguia'],
+[0.01794,0.00581,'color: #bdbdbd','Ainaro'],
+[0.00856,0.00597,'color: #bdbdbd','Alas'],
+[0.01243,0.00785,'color: #bdbdbd','Atabae'],
+[0.01033,0.01546,'color: #bdbdbd','Atauro'],
+[0.03054,0.01737,'color: #bdbdbd','Atsabe'],
+[0.004,0.01337,'color: #bdbdbd','Baguia'],
 [0.02348,0.00819,'color: #f4a582','Balibo'],
-[0.00442,0.00771,'color: #f7f7f7','Barique Natarbora'],
-[0.02673,0.01433,'color: #f7f7f7','Baucau'],
+[0.00442,0.00771,'color: #bdbdbd','Barique Natarbora'],
+[0.02673,0.01433,'color: #bdbdbd','Baucau'],
 [0.02973,0.04825,'color: #92c5de','Bazartete'],
 [0.037,0.01338,'color: #f4a582','Bobonaro'],
-[0.01106,0.00668,'color: #f7f7f7','Cailaco'],
+[0.01106,0.00668,'color: #bdbdbd','Cailaco'],
 [0.03342,0.10663,'color: #0571b0','Cristo Rei'],
-[0.04852,0.05613,'color: #f7f7f7','Dom Aleixo'],
+[0.04852,0.05613,'color: #bdbdbd','Dom Aleixo'],
 [0.05063,0.02516,'color: #f4a582','Ermera'],
-[0.00708,0.00652,'color: #f7f7f7','Fatuberliu'],
-[0.00169,0.0052,'color: #f7f7f7','Fatululic'],
-[0.0052,0.0052,'color: #f7f7f7','Fatumean'],
-[0.00532,0.0052,'color: #f7f7f7','Forohem'],
+[0.00708,0.00652,'color: #bdbdbd','Fatuberliu'],
+[0.00169,0.0052,'color: #bdbdbd','Fatululic'],
+[0.0052,0.0052,'color: #bdbdbd','Fatumean'],
+[0.00532,0.0052,'color: #bdbdbd','Forohem'],
 [0.06701,0.01132,'color: #ca0020','Hatolia'],
-[0.01884,0.00581,'color: #f7f7f7','Hatu-Builico'],
-[0.01417,0.00565,'color: #f7f7f7','Hatu-Udo'],
-[0.00203,0.00807,'color: #f7f7f7','Iliomar'],
-[0.00839,0.00849,'color: #f7f7f7','Laclo'],
-[0.01855,0.00938,'color: #f7f7f7','Laclubar'],
-[0.00857,0.00591,'color: #f7f7f7','Lacluta'],
-[0.00596,0.01297,'color: #f7f7f7','Laga'],
-[0.00282,0.00675,'color: #f7f7f7','Laleia'],
-[0.00942,0.00619,'color: #f7f7f7','Laulara'],
-[0.00627,0.0179,'color: #f7f7f7','Lautem'],
+[0.01884,0.00581,'color: #bdbdbd','Hatu-Builico'],
+[0.01417,0.00565,'color: #bdbdbd','Hatu-Udo'],
+[0.00203,0.00807,'color: #bdbdbd','Iliomar'],
+[0.00839,0.00849,'color: #bdbdbd','Laclo'],
+[0.01855,0.00938,'color: #bdbdbd','Laclubar'],
+[0.00857,0.00591,'color: #bdbdbd','Lacluta'],
+[0.00596,0.01297,'color: #bdbdbd','Laga'],
+[0.00282,0.00675,'color: #bdbdbd','Laleia'],
+[0.00942,0.00619,'color: #bdbdbd','Laulara'],
+[0.00627,0.0179,'color: #bdbdbd','Lautem'],
 [0.0374,0.0173,'color: #f4a582','Letefoho'],
 [0.0279,0.0067,'color: #f4a582','Liquica'],
-[0.00704,0.00619,'color: #f7f7f7','Liquidoe'],
-[0.00661,0.00837,'color: #f7f7f7','Lolotoe'],
-[0.01148,0.00739,'color: #f7f7f7','Lospalos'],
-[0.00132,0.00706,'color: #f7f7f7','Luro'],
-[0.02843,0.02409,'color: #f7f7f7','Maliana'],
-[0.01029,0.00636,'color: #f7f7f7','Manatuto'],
+[0.00704,0.00619,'color: #bdbdbd','Liquidoe'],
+[0.00661,0.00837,'color: #bdbdbd','Lolotoe'],
+[0.01148,0.00739,'color: #bdbdbd','Lospalos'],
+[0.00132,0.00706,'color: #bdbdbd','Luro'],
+[0.02843,0.02409,'color: #bdbdbd','Maliana'],
+[0.01029,0.00636,'color: #bdbdbd','Manatuto'],
 [0.02478,0.00791,'color: #f4a582','Maubara'],
 [0.03644,0.00597,'color: #f4a582','Maubisse'],
-[0.00751,0.00567,'color: #f7f7f7','Maukatar'],
-[0.0049,0.01517,'color: #f7f7f7','Metinaro'],
-[0.01117,0.01542,'color: #f7f7f7','Nein Feto'],
+[0.00751,0.00567,'color: #bdbdbd','Maukatar'],
+[0.0049,0.01517,'color: #bdbdbd','Metinaro'],
+[0.01117,0.01542,'color: #bdbdbd','Nein Feto'],
 [0.00118,0.05135,'color: #0571b0','Nitibe'],
-[0.00217,0.00776,'color: #f7f7f7','Oesilo'],
-[0.00931,0.01045,'color: #f7f7f7','Ossu'],
-[0.0085,0.00771,'color: #f7f7f7','Pante Macasar'],
-[0.00098,0,'color: #f7f7f7','Passabe'],
-[0.00693,0.01334,'color: #f7f7f7','Quelicai'],
-[0.01404,0.00779,'color: #f7f7f7','Railaco'],
-[0.01444,0.0066,'color: #f7f7f7','Remexio'],
+[0.00217,0.00776,'color: #bdbdbd','Oesilo'],
+[0.00931,0.01045,'color: #bdbdbd','Ossu'],
+[0.0085,0.00771,'color: #bdbdbd','Pante Macasar'],
+[0.00098,0,'color: #bdbdbd','Passabe'],
+[0.00693,0.01334,'color: #bdbdbd','Quelicai'],
+[0.01404,0.00779,'color: #bdbdbd','Railaco'],
+[0.01444,0.0066,'color: #bdbdbd','Remexio'],
 [0.03376,0.00646,'color: #f4a582','Same'],
-[0.0026,0.0064,'color: #f7f7f7','Soibada'],
+[0.0026,0.0064,'color: #bdbdbd','Soibada'],
 [0.02603,0.00616,'color: #f4a582','Suai'],
-[0.00895,0.00583,'color: #f7f7f7','Tilomar'],
-[0.00914,0.00581,'color: #f7f7f7','Turiscai'],
-[0.00055,0.00706,'color: #f7f7f7','Tutuala'],
-[0.00587,0.00794,'color: #f7f7f7','Uatucarbau'],
-[0.01049,0.01293,'color: #f7f7f7','Vemase'],
-[0.01351,0.01359,'color: #f7f7f7','Venilale'],
+[0.00895,0.00583,'color: #bdbdbd','Tilomar'],
+[0.00914,0.00581,'color: #bdbdbd','Turiscai'],
+[0.00055,0.00706,'color: #bdbdbd','Tutuala'],
+[0.00587,0.00794,'color: #bdbdbd','Uatucarbau'],
+[0.01049,0.01293,'color: #bdbdbd','Vemase'],
+[0.01351,0.01359,'color: #bdbdbd','Venilale'],
 [0.01392,0.18426,'color: #0571b0','Vera Cruz'],
 [0.02764,0.00997,'color: #f4a582','Viqueque'],
-[0.01178,0.00917,'color: #f7f7f7','Watulari'],
-[0.00793,0.00544,'color: #f7f7f7','Zumalai']
+[0.01178,0.00917,'color: #bdbdbd','Watulari'],
+[0.00793,0.00544,'color: #bdbdbd','Zumalai']
 ]);
 
 	var options = {
           title: 'Illiterate Persons Vs. Education Aid',
-          hAxis: {title: 'Illiterates', minValue: 0, maxValue: 0.07},
-          vAxis: {title: 'Education Aid', minValue: 0, maxValue: 0.19},
-          legend: 'none'
+          hAxis: {title: 'Percent of Timorese Illiterates', minValue: 0, maxValue: 0.19},
+          vAxis: {title: 'Percent of Education Aid', minValue: 0, maxValue: 0.19},
+          legend: 'none',
+		  pointsize: 10
     };
 	
 	var chart = new google.visualization.ScatterChart(document.getElementById('chart_div'));
